# pgvector_cloudsql_gcp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
terraform-sql/: Makefile
terraform-sql/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform-sql/environments/preprod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform-sql/environments/prod/: main.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform-sql/modules/project/: main.tf  variables.tf
terraform-sql/modules/sql/: main.tf  outputs.tf  variables.tf
terraform-sql/modules/vpc/: main.tf  outputs.tf  variables.tf
