[project]
name = "pgvector-cloudsql-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.5",
    "pgvector>=0.2.0",
    "numpy>=1.24.0",
    "google-cloud-storage>=2.7.0",
    "vertexai>=0.0.1",
    "google-cloud-aiplatform>=1.24.0",
    "python-dotenv>=0.21.0",
]
